--- a/lab2/lab2/lab2.vcxproj
+++ b/lab2/lab2/lab2.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e434a292-cfef-43eb-a45d-d9662e16b933}</ProjectGuid>
+    <ProjectGuid>{09050c81-2785-4276-bed6-4139cd69228e}</ProjectGuid>
     <RootNamespace>lab2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,6 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DinArr.h" />
+    <ClInclude Include="Tim.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DinArr.cpp" />
     <ClCompile Include="lab2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
