--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 
 /lab1/.vs/lab1
 /lab2/.vs/lab2
-/lab2/x64
 \lab2\lab2\x64
 /lab2/lab2/x64/Debug/lab2.tlog
 /lab2/lab2/x64/Debug
+/lab2/x64/Debug/lab2.pdb
+/lab2/x64/Debug
