--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /lab2/lab2/x64/Debug
 /lab2/x64/Debug/lab2.pdb
 /lab2/x64/Debug
+/lab3/.vs/lab3
+\lab3\lab3\x64
+/lab3/lab3/x64/Debug/lab3.tlog
+/lab3/lab3/x64/Debug
+/lab3/x64/Debug/lab2.pdb
+/lab3/x64/Debug
